apps/overlays/kubevirt-cluster-319/prod/external-services/network/msr3600.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-msr3600
spec:
  exportTo: ["."]
  hosts:
    - msr3600.external-services.mesh.internal
  location: MESH_EXTERNAL
  ports:
    - number: 8443
      name: http-msr3600
      protocol: HTTP
  resolution: STATIC
  endpoints:
    - address: 192.168.255.4
---
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: external-msr3600
spec:
  exportTo: ["."]
  host: msr3600.external-services.mesh.internal
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8443
        tls:
          mode: SIMPLE
          insecureSkipVerify: true
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-msr3600
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - msr3600.ccsn.dev
  rules:
    - timeouts:
        request: 0s
      backendRefs:
        - group: networking.istio.io
          kind: Hostname
          name: msr3600.external-services.mesh.internal
          port: 8443
