apps/overlays/kubevirt-cluster-319/prod/external-services/network/router.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: external-router
spec:
  exportTo: ["."]
  hosts:
    - router.local
  location: MESH_EXTERNAL
  ports:
    - number: 80
      name: http-router
      protocol: HTTP
  resolution: DNS
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: external-router
spec:
  parentRefs:
    - name: default-gateway
  hostnames:
    - router.ccsn.dev
  rules:
    - backendRefs:
        - group: networking.istio.io
          kind: Hostname
          name: router.local
          port: 80
